# pywatson

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  create-project.sh  environment.example.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.beads/: metadata.json
.github/: copilot-instructions.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
ADOPT_GUIDE/: index.html
CLI/: index.html
DOCKER_GUIDE/: index.html
MAKEFILE_GUIDE/: index.html
QUICKSTART/: index.html
UTILITIES/: index.html
ZENODO/: index.html
api/: index.html
api/core/: index.html
api/utils/: index.html
citation/: index.html
docs/: ADOPT_GUIDE.md  CLI.md  DOCKER_GUIDE.md  MAKEFILE_GUIDE.md  QUICKSTART.md  UTILITIES.md  ZENODO.md  citation.md  index.md
docs/api/: core.md  index.md  utils.md
docs/javascripts/: extra.js
javascripts/: extra.js
scripts/: generate_readme.py
search/: search_index.json
src/pyscaffold_drwatson/: __init__.py  core.py  drwatson.py
src/pywatson/: __init__.py  core.py  drwatson.py  utils.py
src/pywatson/templates/: CHANGELOG.md.jinja2  CONTRIBUTING.md.jinja2  Dockerfile.jinja2  LICENSE_APACHE2.jinja2  LICENSE_BSD3.jinja2  LICENSE_ISC.jinja2  Makefile.jinja2  README.md.jinja2  README_DOCKER.md.jinja2  __init__.py.jinja2  analyze_data.py.jinja2  ci.yml.jinja2  core.py.jinja2  docker-compose.yml.jinja2  docker-publish.yml.jinja2  dockerignore.jinja2  generate_data.py.jinja2  gitignore.jinja2  notebook.ipynb.jinja2  pytest.ini.jinja2  pywatson_showcase.py.jinja2  ruff.toml.jinja2  test_core.py.jinja2
stylesheets/: extra.css
tests/: __init__.py  test_adopt.py  test_cli.py  test_docker_e2e.py  test_scaffolder.py  test_templates.py  test_utils.py
