[project]
name = "pywatson"
version = "0.1.0"
description = "A Python scientific project managment tool inspired by DrWatson.jl for creating well-structured scientific computing projects"
readme = "README.md"
authors = [
    { name = "isaac-tes", email = "i.tesfaye@tu-berlin.de" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "h5py>=3.14.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


[project.scripts]
drwatson-init = "pywatson.core:create_project"
